Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-96930

REG:5.15.3->5.15.4 - When doing a pinch gesture inside a WebEngineView then it has no effect

    XMLWordPrintable

Details

    • macOS
    • ff54ccc82fdba26cf16b9a64b387e3b428fb3038 (qt/qtwebengine/dev) a48f68c10f7ed13a0c6d249b0a8a791ebaae0634 (qt/qtwebengine/6.2) 03b3df668088d0750af6a59410ee4d0d00ba88ae (qt/qtwebengine/5.15)

    Description

      REG:5.15.3->5.15.4 - When doing a pinch gesture inside a WebEngineView then it has no effect. It is expected that it would zoom in and out. This is reproducible in the quicknanobrowser example.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            pvarga Peter Varga
            andysh Andy Shaw
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes